docs(tornadovm-issues): record the missing cuda_fp16.h include, with a reproducer
A kernel that stores into a half-precision shared tile fails to compile unless
some other construct happens to spell fp16 in the generated text. Both offending
lines are emitted by the backend itself -- the tile by
allocateHalfFloatLocalArray, the store by mmaStoreBSwizzled -- while the include
is decided by scanning the source for __half, half2 or 2half, which does not
cover the bare half the backend writes.

MissingFp16IncludeRepro.java is standalone: one kernel, four arrays, one
m16n8k16 step, no model and nothing from this engine. It has two modes that
differ by a single getHalfFloat read; the first fails with identifier "half" is
undefined, the second compiles and prints a result. A compile-time constant
value hides the defect, since new HalfFloat(0.5f) emits __float2half, so the
reproducer stores a value computed at run time.

The record carries the environment, the exact build and run commands, expected
against actual output, the generated excerpt, the source location of the
condition and a suspected fix that has not been applied. No TornadoVM change and
no issue filed.

It also states that the engine-side move of the Q5_K and Q4_1 scale reads to
getHalfFloat is an avoidance rather than a fix: the defect is unchanged and any
kernel that stores into a half tile without another fp16 spelling still fails.